--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,8 +49,9 @@ if (UNIX OR ADD_WINDOWS_ENCLAVE_TESTS OR USE_CLANGW)
         add_subdirectory(thread)
         add_subdirectory(threadcxx)
         add_subdirectory(thread_local)
-        add_subdirectory(tls)
-        add_subdirectory(VectorException)
+        add_subdirectory(tls_apis)
+        add_subdirectory(tls_e2e)
+	add_subdirectory(VectorException)
     endif()
 
 add_subdirectory(create-errors)
